removed phylum in chunck 25.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@351 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: f482f41c124e8820118c4a396a18926f6a40699a

--- a/pkg/QuasiAlign/vignettes/QuasiAlign.Rnw
+++ b/pkg/QuasiAlign/vignettes/QuasiAlign.Rnw
@@ -644,8 +644,7 @@ against all
 the models stored in a directory. It returns a data.frame containing the
 score matrix and the actual and predicted ranks. 
 <<>>=
-unknown <- getSequences(db, table="NSV", rank="Phylum", 
-                        limit=10, random=TRUE)
+unknown <- getSequences(db, table="NSV", limit=10, random=TRUE)
 pred <- predict(classifier, unknown, rank="Phylum")
 head(pred$score)
 head(pred$class)
