changed to BiostringsTools.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@364 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: 0d3c850cb8f4bd68de742f6973e82e088e8f9975

--- a/pkg/QuasiAlign/vignettes/QuasiAlign.Rnw
+++ b/pkg/QuasiAlign/vignettes/QuasiAlign.Rnw
@@ -317,7 +317,7 @@ this approach for taxonomic classification in \citep{hahsler:Kotamarti:2010}.
 \section{QuasiAlign Package}
 \pkg{QuasiAlign} builds on the packages 
 \pkg{Biostrings} for biological sequence analysis
-and \pkg{BioTools} for database supported
+and \pkg{BiostringsTools} for database supported
 sequence storage and data management. 
 For modeling, \pkg{rEMM}
 which implements TRACDS (Transitions Among Clusters for Data Streams)
