--- a/pkg/rRDP/vignettes/rRDP.Rnw
+++ b/pkg/rRDP/vignettes/rRDP.Rnw
@@ -63,7 +63,7 @@ for 16S rRNA sequences developed by the Ribosomal Database Project (RDP).
 With this package the classifier trained with the standard training set can be used
 or a custom classifier can be trained.
 
-Current version of RDP: 2.5
+Current RDP version is 2.8.
 }
 \Keywords{bioinformatics, Bioconductor, Biostrings, sequence classification}
 \Plainkeywords{bioinformatics, Bioconductor, Biostrings, sequence classification}
@@ -135,15 +135,21 @@ quickly and accurately classify sequences. The classifier uses
 RDP is shipped trained with a 16S rRNA training set. The model data is available
 in the data package~\pkg{rRDPData}.
 
-For the following example we load some test sequences shipped with the package 
-and shorten the names to only the sequence ID for convenience.
+For the following example we load some test sequences shipped with the package. 
 <<>>=
 library(rRDP)
 
 seq <- readRNAStringSet(system.file("examples/RNA_example.fasta",
         package="rRDP"))
+seq
+@
 
-classification <- names(seq)
+Note that the name contains the annotation from the FASTA file. In this case
+the annotation contains the actual classification information and is encoded 
+in Greengenes format. For convenience, we replace the annotation with just the
+sequence id.
+<<>>=
+annotation <- names(seq)
 
 names(seq) <-  sapply(strsplit(names(seq), " "), "[", 1)
 seq
@@ -162,9 +168,23 @@ The prediction confidence is supplied as the attribute \code{"confidence"}.
 attr(pred, "confidence")
 @
   
-  
+To evaluate the classification accuracy we can compare the known classification
+with the predictions. The known classification was stored in the FASTA file
+and encoded in Greengenes format. We can decode the annotation using 
+\code{decode_Greengenes()}.
 
+<<>>=
+actual <- decode_Greengenes(annotation)
+actual
+@
 
+Now we can compare the prediction with the actual classification by creating
+a confusion table and calculating the classification accuracy. Here we do this
+at the Genus level.
+<<>>=
+confusionTable(actual, pred, rank="genus")
+accuracy(actual, pred, rank="genus")
+@
 
 \subsection{Training a custom RDP classifier}
 
