Removed caret (built problem on r-forge).
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/mmsa@378 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

Former-commit-id: 26e6f835a2e624e1c9d17cd0f0aa73d14e4140fb

--- a/pkg/QuasiAlign/vignettes/QuasiAlign.Rnw
+++ b/pkg/QuasiAlign/vignettes/QuasiAlign.Rnw
@@ -592,7 +592,6 @@ and places them in the subdirectory phylum.
 <<eval=false>>=
 library("doParallel")
 registerDoParallel()
-library("caret")
 @
 
 <<trainClassifier>>=
@@ -654,7 +653,9 @@ Compare the predictions with the true class labels.
 <<>>=
 actual<- getRank(db, rank="Phylum", whereRank="id", whereName=names(unknown))
 head(actual)
-caret::confusionMatrix(pred$class, reference=factor(actual, levels=levels(pred$class)))
+#library("caret")
+#caret::confusionMatrix(pred$class, reference=factor(actual, levels=levels(pred$class)))
+table(pred$class, reference=factor(actual, levels=levels(pred$class)))
 @
 
 The default method for \func{classify} is \verb|supported_transitions|, but other methods can also be easily used. 
